# tplegal-demand-generator

./: .gitignore  PROJECT_INSTRUCTIONS.md  calc_cli.py  demand_generator.py  demand_variants.py  pyproject.toml
demand_generator/: __init__.py  calc.py  calc_cli.py  civil_interest.py  generator.py  gus_lookup.py  utils.py
demand_generator/templates/: wezwanie_template.docx
tests/: test_calc.py  test_civil_interest.py  test_demand.py  test_gus_lookup.py
