[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tplegal-demand-generator"
version = "0.2.0"
description = "Demand letter generator & compensation calculator"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "holidays",
]

[project.scripts]
generate-demand = "demand_generator.generator:main"
calc-rekompensa = "demand_generator.calc_cli:main"

[tool.setuptools.packages.find]
include = ["demand_generator*"]

[tool.setuptools.package-data]
demand_generator = ["templates/*.docx"]
